# giant-blackbox

./: .gitignore  Dockerfile  LICENSE  Makefile  README  README.md  action.yml  entrypoint.sh  pyproject.toml
etc/: requirements.txt
src/: tests.py
src/blackbox/: __init__.py  checks.py  constants.py  tests.py
src/tests/: checks.py  tests.py
