[tool.poetry]
name = "blackbox"
version = "0.1.0"
description = ""
authors = ["Jon Atkinson <jon@giantmade.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.3"
requests = "^2.24.0"
requests-cache = "^0.5.2"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
